crates/formatter/tests/snapshots/snapshots__coder__migrations__000487_chat_debug_runs_updated_at_index.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index idx_chat_debug_runs_updated_at on chat_debug_runs (updated_at);
