crates/formatter/tests/snapshots/snapshots__coder__migrations__000490_trigger_delete_user_secrets.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Extend the soft-delete cleanup trigger to also wipe user_secrets.
-- user_secrets.user_id has ON DELETE CASCADE, but Coder soft-deletes
-- users by flipping users.deleted instead of removing the row, so the
-- FK cascade never fires and secrets would otherwise survive deletion.
--
-- Backfill any rows that belonged to already-soft-deleted users before
-- replacing the function.
delete from user_secrets where user_id in (select id from users where deleted);

create or replace function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.deleted) then
		-- Remove their api_keys
		delete from api_keys
		where user_id = OLD.id;

		-- Remove their user_links
		-- Their login_type is preserved in the users table.
		-- Matching this user back to the link can still be done by their
		-- email if the account is undeleted. Although that is not a guarantee.
		delete from user_links
		where user_id = OLD.id;

		-- Remove their user_secrets.
		-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
		-- does not remove the users row so the FK cascade never fires.
		delete from user_secrets
		where user_id = OLD.id;
	end if;
	return NEW;
end;
$$;

-- Prevent adding new user_secrets for soft-deleted users.
-- Closes the window between an in-flight CreateUserSecret request
-- and the soft-delete UPDATE committing.
create function insert_user_secret_fail_if_user_deleted()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.user_id is not null) then
		if (select deleted from users where id = NEW.user_id limit 1) then
			raise exception 'Cannot create user_secret for deleted user';
		end if;
	end if;
	return NEW;
end;
$$;

create trigger trigger_upsert_user_secrets
	before insert or update on user_secrets
	for each row
	execute procedure insert_user_secret_fail_if_user_deleted();
