crates/formatter/tests/snapshots/snapshots__coder__migrations__000493_idx_chat_diff_statuses_url_lower.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_chat_diff_statuses_url_lower;
