crates/formatter/tests/snapshots/snapshots__coder__migrations__000497_group_ai_budgets.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists group_ai_budgets cascade;
