crates/formatter/tests/snapshots/snapshots__coder__migrations__000499_ai_provider_type_chatd_values.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Widen ai_provider_type to carry the full chatd provider set so the
-- chatd-side migration can preserve type fidelity when it lands. The
-- aibridge runtime currently has native support only for OpenAI and
-- Anthropic (with a Bedrock variant on the Anthropic client); the new
-- non-Bedrock types route through the OpenAI fantasy client today
-- because chatd already configures these providers against their
-- OpenAI-compatible endpoints. Native gateway-side support for these
-- providers comes later, at which point this enum already carries the
-- right discriminator and no further migration is needed.
--
-- Recreate the type rather than using ALTER TYPE ... ADD VALUE. Postgres
-- forbids using a value added by ADD VALUE within the same transaction, and
-- all migrations run in one transaction. 000504 casts existing chat_providers
-- rows to these new values in that same transaction, so ADD VALUE fails with
-- "unsafe use of new value". A freshly created enum's values are usable
-- immediately, so the cast in 000504 succeeds.
create type new_ai_provider_type as enum (
	'openai',
	'anthropic',
	'azure',
	'bedrock',
	'google',
	'openai-compat',
	'openrouter',
	'vercel'
);

alter table ai_providers
	alter column type type new_ai_provider_type using (
		type::text::new_ai_provider_type
	);

drop type ai_provider_type;

alter type new_ai_provider_type rename to ai_provider_type;
