crates/formatter/tests/snapshots/snapshots__coder__migrations__000500_audit_group_ai_budget_resource_type.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Audit log resource type for group AI budgets.
alter type resource_type add value if not exists 'group_ai_budget';
