crates/formatter/tests/snapshots/snapshots__coder__migrations__000501_chat_acl_sharing.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view if exists chats_expanded;

alter table chats
	add column user_acl jsonb not null default '{}'::jsonb,
	add column group_acl jsonb not null default '{}'::jsonb;

alter table chats
	add constraint chat_user_acl_not_null_jsonb
		check (user_acl is not null and jsonb_typeof(user_acl) = 'object'),
	add constraint chat_group_acl_not_null_jsonb
		check (group_acl is not null and jsonb_typeof(group_acl) = 'object'),
	add constraint chat_acl_only_on_root_chats
		check (
			(parent_chat_id is null and root_chat_id is null)
			or (user_acl = '{}'::jsonb and group_acl = '{}'::jsonb)
		);

create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.last_injected_context,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	coalesce(root.user_acl, c.user_acl) as user_acl,
	coalesce(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name
from chats c
	left join chats root on root.id = coalesce(c.root_chat_id, c.parent_chat_id)
	join visible_users owner on owner.id = c.owner_id;

alter type api_key_scope add value if not exists 'chat:share';
