crates/formatter/tests/snapshots/snapshots__coder__migrations__000502_user_skills.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Enum additions to resource_type and api_key_scope are intentionally not
-- reverted because Postgres cannot drop enum values safely.
drop trigger if exists trigger_upsert_user_skills on user_skills;
drop function IF exists insert_user_skill_fail_if_user_deleted;

-- Restore the previous body of delete_deleted_user_resources() from
-- migration 000492 (without the user_skills cleanup).
create or replace function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.deleted) then
		-- Remove their api_keys.
		delete from api_keys
		where user_id = OLD.id;

		-- Remove their user_links.
		-- Their login_type is preserved in the users table.
		-- Matching this user back to the link can still be done by their
		-- email if the account is undeleted. Although that is not a guarantee.
		delete from user_links
		where user_id = OLD.id;

		-- Remove their user_secrets.
		-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
		-- does not remove the users row so the FK cascade never fires.
		delete from user_secrets
		where user_id = OLD.id;

		-- Remove their organization memberships.
		-- This also triggers group membership cleanup via
		-- trigger_delete_group_members_on_org_member_delete.
		delete from organization_members
		where user_id = OLD.id;
	end if;
	return NEW;
end;
$$;

drop trigger if exists trigger_user_skills_per_user_limit on user_skills;
drop function IF exists enforce_user_skills_per_user_limit();
drop table user_skills;
