crates/formatter/tests/snapshots/snapshots__coder__migrations__000502_user_skills.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Creates the user_skills table and indexes.
create table user_skills (
	id uuid primary key,
	user_id uuid not null references users (id) on delete cascade,
	name text not null,
	description text not null default '',
	content text not null,
	created_at timestamptz not null default now(),
	updated_at timestamptz not null default now(),
	constraint user_skills_name_size check (octet_length(name) <= 256),
	constraint user_skills_name_format check (name ~ '^[a-z0-9]+(-[a-z0-9]+)*$'),
	constraint user_skills_description_size
		check (octet_length(description) <= 4096),
	constraint user_skills_content_size check (octet_length(content) <= 65536)
);

create unique index user_skills_user_id_name_idx on user_skills (user_id, name);

-- Enforces the per-user personal-skill cap at the schema level so the
-- invariant survives any future refactor of InsertUserSkill. The cap
-- value must stay in sync with skills.MaxPersonalSkillsPerUser in Go.
create function enforce_user_skills_per_user_limit()
returns trigger
language plpgsql
as $$
declare
	skill_count int;
	skill_limit constant int := 100;
begin
	-- Serialize skill-cap checks per user so concurrent inserts cannot all
	-- observe the same pre-insert count and exceed the hard limit.
	perform 1
	from users
	where id = NEW.user_id
	for update;

	select count(*) into skill_count from user_skills where user_id = NEW.user_id;
	if skill_count >= skill_limit then
		raise exception 'user has reached the personal skill limit'
		using ERRCODE = 'check_violation',
		constraint = 'user_skills_per_user_limit';
	end if;
	return NEW;
end;
$$;

create trigger trigger_user_skills_per_user_limit
	before insert on user_skills
	for each row
	execute procedure enforce_user_skills_per_user_limit();

-- Extend the soft-delete cleanup trigger to also wipe user_skills.
-- user_skills.user_id has ON DELETE CASCADE, but Coder soft-deletes
-- users by flipping users.deleted instead of removing the row, so the
-- FK cascade never fires and skills would otherwise survive deletion.
delete from user_skills where user_id in (select id from users where deleted);

create or replace function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.deleted) then
		-- Remove their api_keys.
		delete from api_keys
		where user_id = OLD.id;

		-- Remove their user_links.
		-- Their login_type is preserved in the users table.
		-- Matching this user back to the link can still be done by their
		-- email if the account is undeleted. Although that is not a guarantee.
		delete from user_links
		where user_id = OLD.id;

		-- Remove their user_secrets.
		-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
		-- does not remove the users row so the FK cascade never fires.
		delete from user_secrets
		where user_id = OLD.id;

		-- Remove their organization memberships.
		-- This also triggers group membership cleanup via
		-- trigger_delete_group_members_on_org_member_delete.
		delete from organization_members
		where user_id = OLD.id;

		-- Remove their user_skills.
		-- user_skills.user_id has ON DELETE CASCADE, but soft-delete
		-- does not remove the users row so the FK cascade never fires.
		delete from user_skills
		where user_id = OLD.id;
	end if;
	return NEW;
end;
$$;

-- Prevent adding new user_skills for soft-deleted users.
-- Closes the window between an in-flight CreateUserSkill request and
-- the soft-delete UPDATE committing.
create function insert_user_skill_fail_if_user_deleted()
returns trigger
language plpgsql
as $$
begin
	perform 1 from users where id = NEW.user_id and deleted = true limit 1;
	if FOUND then
		raise exception 'Cannot create user_skill for deleted user'
		using ERRCODE = 'check_violation',
		constraint = 'user_skill_user_deleted';
	end if;
	return NEW;
end;
$$;

create trigger trigger_upsert_user_skills
	before insert or update on user_skills
	for each row
	execute procedure insert_user_skill_fail_if_user_deleted();

-- Adds the user skill audit resource type.
alter type resource_type add value if not exists 'user_skill';

-- Adds API key scopes for managing user skills.
alter type api_key_scope add value if not exists 'user_skill:create';
alter type api_key_scope add value if not exists 'user_skill:read';
alter type api_key_scope add value if not exists 'user_skill:update';
alter type api_key_scope add value if not exists 'user_skill:delete';
alter type api_key_scope add value if not exists 'user_skill:*';
